--- a/Lonelysg/app/src/main/res/values/colors.xml
+++ b/Lonelysg/app/src/main/res/values/colors.xml
@@ -2,5 +2,12 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
+    <color name="backgroundcolor">#fcfcfc</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="green">#00bfa5</color>
+    <color name="lightgray">#ededed</color>
+    <color name="deeppurple">#7c4dff</color>
+    <color name="lightorange">#FFC107</color>
+    <color name="orange">#FFA000</color>
+    <color name="pink">#FF4081</color>
 </resources>
