--- a/Lonelysg/app/src/main/res/values/colors.xml
+++ b/Lonelysg/app/src/main/res/values/colors.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#23A7D8</color>
     <color name="backgroundcolor">#fcfcfc</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="gradStart">#19AA8B</color>
+    <color name="gradEnd">#23A7D8</color>
+    <color name="colorAccent">#40E0D0</color>
     <color name="green">#00bfa5</color>
     <color name="lightgray">#ededed</color>
     <color name="deeppurple">#7c4dff</color>
-    <color name="lightorange">#FFC107</color>
     <color name="orange">#FFA000</color>
+    <color name="darkblue">#0D5098</color>
+    <color name="white">#fcfcfc</color>
     <color name="pink">#FF4081</color>
+    <color name="black">#000000</color>
+
+
 </resources>
+
