--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -42,7 +42,8 @@
             android:textStyle="bold"
             android:layout_centerHorizontal="true"/>
 
-        <Button
+        <Spinner
+            android:id="@+id/moreSettingsicon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
