Added new layout for new account creation

--- a/Lonelysg/app/src/main/res/layout/login_screen.xml
+++ b/Lonelysg/app/src/main/res/layout/login_screen.xml
@@ -26,93 +26,12 @@
             android:src="@drawable/logo"/>
 
         <RelativeLayout
+            android:id="@+id/loginStuff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/logo"
             android:layout_marginTop="5dp"
-            android:visibility="gone"
-            android:id="@+id/loginStuff">
-
-            <TextView
-                android:id="@+id/loginText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:text="Login"
-                android:textStyle="bold"
-                android:layout_marginLeft="20dp"
-                android:textColor="@color/backgroundcolor"
-                android:textSize="30sp"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/loginText"
-                android:id="@+id/usernamePasswordInput">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="USERNAME"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="20dp"
-                        android:textColor="@color/backgroundcolor"
-                        android:textSize="20sp"/>
-
-                    <EditText
-                        android:id="@+id/usernameInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="18dp"
-                        android:textColor="@color/backgroundcolor"
-                        android:background="@drawable/borders"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginLeft="20dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/usernameInput">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:id="@+id/passwordInputStuff">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="PASSWORD"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginLeft="20dp"
-                            android:textColor="@color/backgroundcolor"
-                            android:textSize="20sp"/>
-
-                        <EditText
-                            android:id="@+id/passwordInput"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textSize="18dp"
-                            android:textColor="@color/backgroundcolor"
-                            android:background="@drawable/borders"
-                            android:layout_marginTop="0dp"
-                            android:layout_marginRight="20dp"
-                            android:layout_marginLeft="20dp"/>
-                    </LinearLayout>
-
-                </LinearLayout>
-                </LinearLayout>
-
-            </RelativeLayout>
+            android:visibility="gone">
 
             <Button
                 android:id="@+id/signInButton"
@@ -127,7 +46,88 @@
                 android:text="SIGN IN"
                 android:textColor="@color/backgroundcolor"
                 android:textSize="21sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
+            <RelativeLayout
+                android:id="@+id/usernamePasswordInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/loginText">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/usernameInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/borders"
+                        android:textColor="@color/backgroundcolor"
+                        android:textSize="18dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/usernameInput">
+
+                        <LinearLayout
+                            android:id="@+id/passwordInputStuff"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <EditText
+                                android:id="@+id/passwordInput"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="0dp"
+                                android:layout_marginRight="20dp"
+                                android:background="@drawable/borders"
+                                android:textColor="@color/backgroundcolor"
+                                android:textSize="18dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:text="PASSWORD"
+                                android:textColor="@color/backgroundcolor"
+                                android:textSize="20sp" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:text="USERNAME"
+                        android:textColor="@color/backgroundcolor"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/loginText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="0dp"
+                android:text="Login"
+                android:textColor="@color/backgroundcolor"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
