--- a/Lonelysg/app/src/main/res/drawable/splash_screen.xml
+++ b/Lonelysg/app/src/main/res/drawable/splash_screen.xml
@@ -3,7 +3,7 @@
         android:shape="rectangle">
 
         <gradient
-            android:angle="0"
+            android:angle="90"
             android:startColor="@color/gradEnd"
-            android:endColor="@color/backgroundcolor"/>
+            android:endColor="@color/colorAccent"/>
 </shape>
