--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".AccountUI"
     android:background="@color/backgroundcolor">
-    >
 
     <RelativeLayout
         android:id="@+id/userProfileTop"
@@ -236,7 +235,7 @@
                     android:layout_height="36dp"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="70dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="40dp"
                     android:background="@drawable/borders3"
                     android:paddingLeft="60dp"
                     android:paddingRight="60dp"
