--- a/Lonelysg/app/src/main/res/layout/fragment_invitation.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_invitation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".CreateInvitationUI"
     android:orientation="vertical"
     android:background="@color/backgroundcolor">
     >
@@ -66,7 +66,8 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:background="@drawable/rectangleborder"/>
 
             <EditText
                 android:layout_width="match_parent"
