--- a/Lonelysg/app/src/main/res/values/colors.xml
+++ b/Lonelysg/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="gradStart">#19AA8B</color>
     <color name="gradEnd">#23A7D8</color>
     <color name="colorAccent">#40E0D0</color>
-    <color name="green">#00bfa5</color>
+    <color name="green">#A0ECDC</color>
     <color name="lightgray">#ededed</color>
     <color name="deeppurple">#7c4dff</color>
     <color name="orange">#FFA000</color>
