--- a/Lonelysg/app/src/main/res/drawable/borders3.xml
+++ b/Lonelysg/app/src/main/res/drawable/borders3.xml
@@ -10,5 +10,11 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/black"/>
+        android:color="@color/pink"/>
+
+    <gradient
+        android:angle="90"
+        android:startColor="@color/pink"
+        android:endColor="@color/pink"/>
+
 </shape>
