--- a/Lonelysg/app/src/main/res/layout/activity_individial_invitation_u_i.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individial_invitation_u_i.xml
@@ -224,12 +224,12 @@
                     android:layout_width="150dp"
                     android:layout_height="35dp"
                     android:id="@+id/rejectInvitation"
-                    android:text="REJECT "
+                    android:text="BACK "
                     android:textColor="@color/white"
                     android:textAlignment="textEnd"
                     android:textSize="18sp"
                     android:drawableRight="@drawable/cancel_icon"
-                    android:paddingRight="27dp"
+                    android:paddingRight="34dp"
                     android:background="@drawable/borders3"/>
 
             </LinearLayout>
