--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -246,7 +246,7 @@
 
                 <Button
                     android:id="@+id/logoutButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="255dp"
                     android:layout_height="36dp"
                     android:layout_marginLeft="70dp"
                     android:layout_marginRight="70dp"
@@ -255,7 +255,7 @@
                     android:paddingLeft="60dp"
                     android:paddingRight="60dp"
                     android:text="LOG OUT"
-                    android:textColor="#000000"
+                    android:textColor="@color/white"
                     android:textSize="21sp"
                     android:textStyle="bold"/>
 
