--- a/Lonelysg/app/src/main/res/layout/chat_view_receiver.xml
+++ b/Lonelysg/app/src/main/res/layout/chat_view_receiver.xml
@@ -10,6 +10,7 @@
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#25353535"
         android:text="Message"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
