--- a/Lonelysg/app/src/main/res/layout/login_screen.xml
+++ b/Lonelysg/app/src/main/res/layout/login_screen.xml
@@ -104,6 +104,7 @@
                                 android:layout_marginTop="0dp"
                                 android:layout_marginRight="20dp"
                                 android:background="@drawable/borders"
+                                android:inputType="textPassword"
                                 android:textColor="@color/backgroundcolor"
                                 android:textSize="18dp" />
 
