--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageUser"
-            android:text="USER 01, 25"
+            android:text="Loading..."
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"/>
@@ -89,7 +89,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="User 01"
+                        android:id="@+id/accountUsername"
+                        android:text="Loading..."
                         android:textSize="20sp"
                         android:textColor="#000000"/>
 
@@ -121,7 +122,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Male"
+                        android:text="Loading..."
+                        android:id="@+id/accountGender"
                         android:textSize="20sp"
                         android:textColor="#000000"/>
 
@@ -153,7 +155,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="25"
+                        android:text="Loading..."
+                        android:id="@+id/accountAge"
                         android:textSize="20sp"
                         android:textColor="#000000"/>
 
@@ -185,7 +188,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Architect"
+                        android:text="Loading..."
+                        android:id="@+id/accountOccupation"
                         android:textSize="20sp"
                         android:textColor="#000000"/>
 
@@ -217,7 +221,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Eating, Sleeping"
+                        android:text="Loading..."
+                        android:id="@+id/accountInterests"
                         android:textSize="20sp"
                         android:textColor="#000000"/>
 
