--- a/Lonelysg/app/src/main/res/values/ids.xml
+++ b/Lonelysg/app/src/main/res/values/ids.xml
@@ -3,4 +3,7 @@
     <item name="chatView" type="id" />
     <item name="typeMessage" type="id" />
     <item name="sendButton" type="id" />
+    <item name="invitationsIcon" type="id" />
+    <item name="constraintLayout" type="id" />
+    <item name="requestsIcon" type="id" />
 </resources>
