--- a/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
+++ b/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".LoginUI">
+    tools:context=".Activities.LoginUI">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,23 +27,22 @@
             android:layout_gravity="center">
 
             <TextView
-                android:id="@+id/activityName"
+                android:id="@+id/invitationTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginLeft="15dp"
-                android:text="Activity Name"
+                android:text="Invitation Name"
                 android:textSize="24sp"
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/activityDateTime"
+                android:id="@+id/invitationDateTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/activityName"
                 android:layout_marginLeft="15dp"
                 android:layout_weight="1"
-                android:text="Activity Date and Time"
+                android:text="Invitation Date and Time"
                 android:textSize="16sp" />
         </LinearLayout>
 
