--- a/Lonelysg/app/src/main/res/layout/activity_individial_invitation_u_i.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individial_invitation_u_i.xml
@@ -14,8 +14,9 @@
         android:theme="@style/ThemeOverlay.AppCompat.Light"
         >
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingtoolbar"
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map_view"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             app:layout_scrollFlags="exitUntilCollapsed|scroll"
@@ -43,7 +44,7 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </fragment>
 
     </com.google.android.material.appbar.AppBarLayout>
 
