This is the front end

--- a/Lonelysg/app/src/main/res/layout/activity_received_requests_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_received_requests_ui.xml
@@ -4,28 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.ReceivedRequestsUI">
+    tools:context=".Activities.ReceivedRequestsUI"
+    android:background="@drawable/splash_screen">
 
-    <ListView
-        android:id="@+id/receivedRequestsListView"
-        android:layout_width="315dp"
-        android:layout_height="500dp"
-        android:layout_marginBottom="68dp"
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/receivedRequestsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Received Requests"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/receivedRequestsListView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.873" />
+        android:background="@drawable/splash_screen">
+
+        <TextView
+            android:id="@+id/receivedRequestsTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="RECEIVED REQUESTS"
+            android:textSize="36sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/receivedRequestsListView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.363"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.873"/>
+
+        <View
+            android:layout_width="350dp"
+            android:layout_height="1dp"
+            android:layout_margin="5dp"
+            android:background="@color/white"/>
+
+        <ListView
+            android:id="@+id/receivedRequestsListView"
+            android:layout_width="340dp"
+            android:layout_height="475dp"
+            android:layout_marginTop="20dp"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
