--- a/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fcfcfc"
+        android:background="@drawable/splash_screen"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
@@ -22,10 +22,18 @@
             android:id="@+id/newInvitation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:text="New Invitation"
-            android:textSize="36sp" />
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:text="NEW INVITATION"
+            android:textSize="36sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+        <View
+            android:layout_width="350dp"
+            android:layout_height="1dp"
+            android:layout_margin="5dp"
+            android:background="@color/white"/>
 
         <EditText
             android:id="@+id/enterTitle"
