--- a/Lonelysg/app/src/main/res/layout/fragment_discovery.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_discovery.xml
@@ -74,8 +74,7 @@
                     <ImageView
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:background="@drawable/food_icon"
-                        android:padding="10dp"/>
+                        android:background="@drawable/food_icon"/>
 
                     <TextView
                         android:layout_width="wrap_content"
